<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubmitPageBreed">

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="411dp"
        android:layout_height="731dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/app_bg" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/kreon_light"
        android:text="@string/question_label_final"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView31" />

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24"
        app:srcCompat="@drawable/stbernard" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/kreon"
        android:text="@string/breed_quiz_label"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView32" />

    <Button
        android:id="@+id/choice1BreedBtn"
        android:layout_width="153dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/choices_dogbreed"
        android:fontFamily="@font/kreon"
        android:text="@string/bq_choice1"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/choice2BreedBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <Button
        android:id="@+id/choice2BreedBtn"
        android:layout_width="153dp"
        android:layout_height="63dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/choices_dogbreed"
        android:fontFamily="@font/kreon"
        android:text="@string/bq_choice2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <Button
        android:id="@+id/choice3BreedBtn"
        android:layout_width="153dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/choices_dogbreed"
        android:fontFamily="@font/kreon"
        android:text="@string/bq_choice3"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/choice4BreedBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choice1BreedBtn" />

    <Button
        android:id="@+id/choice4BreedBtn"
        android:layout_width="153dp"
        android:layout_height="63dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/choices_dogbreed"
        android:fontFamily="@font/kreon"
        android:text="@string/bq_choice4"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choice2BreedBtn" />

    <Button
        android:id="@+id/submitBreedBtn"
        android:layout_width="227dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/btn_background"
        android:fontFamily="@font/krona_one"
        android:onClick="onSubmitClick"
        android:text="@string/submit_lbl"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView31"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choice4BreedBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>