<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question1FragmentBreed">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/kreon_light"
        android:text="@string/question10_label"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:srcCompat="@drawable/bulldog" />

    <Button
        android:id="@+id/choice1BreedBtn10"
        android:layout_width="153dp"
        android:layout_height="63dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="380dp"
        android:background="@drawable/button_square"
        android:fontFamily="@font/kreon"
        android:text="@string/ch1_breed10"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/choice2BreedBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView34" />

    <Button
        android:id="@+id/choice2BreedBtn10"
        android:layout_width="153dp"
        android:layout_height="63dp"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="380dp"
        android:background="@drawable/button_square"
        android:fontFamily="@font/kreon"
        android:text="@string/ch2_breed10"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView34" />

    <Button
        android:id="@+id/choice3BreedBtn10"
        android:layout_width="153dp"
        android:layout_height="63dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="460dp"
        android:background="@drawable/button_square"
        android:fontFamily="@font/kreon"
        android:text="@string/ch3_breed10"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/choice4BreedBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choice1BreedBtn" />

    <Button
        android:id="@+id/choice4BreedBtn10"
        android:layout_width="153dp"
        android:layout_height="63dp"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="460dp"
        android:background="@drawable/button_square"
        android:fontFamily="@font/kreon"
        android:text="@string/ch4_breed10"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choice2BreedBtn" />
    <FrameLayout
        android:id="@+id/statusLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</FrameLayout>