<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubmitPageTrivia">

    <ImageView
        android:id="@+id/imageView35"
        android:layout_width="411dp"
        android:layout_height="731dp"
        android:background="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/app_bg" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/kreon_light"
        android:text="@string/question_label"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView36"
        android:layout_width="632dp"
        android:layout_height="451dp"
        android:layout_marginTop="16dp"
        android:cropToPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/quiz_trivia_bg_pic" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="334dp"
        android:layout_height="171dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/kreon"
        android:gravity="center"
        android:text="@string/question"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <ImageView
        android:id="@+id/imageView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="284dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28"
        app:srcCompat="@drawable/dog_logo_trivia" />

    <Button
        android:id="@+id/choice1TriviaBtn"
        android:layout_width="184dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/choices_trivia"
        android:fontFamily="@font/kreon"
        android:text="@string/tq_choice1"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <Button
        android:id="@+id/choice2TriviaBtn"
        android:layout_width="184dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/choices_trivia"
        android:fontFamily="@font/kreon"
        android:text="@string/tq_choice2"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choice1TriviaBtn" />

    <Button
        android:id="@+id/choice3TriviaBtn"
        android:layout_width="184dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/choices_trivia"
        android:fontFamily="@font/kreon"
        android:text="@string/tq_choice3"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choice2TriviaBtn" />

    <Button
        android:id="@+id/submitTriviaBtn"
        android:layout_width="227dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_background"
        android:fontFamily="@font/krona_one"
        android:onClick="onSubmitClick"
        android:text="@string/submit_lbl"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choice3TriviaBtn"
        app:layout_constraintVertical_bias="0.011" />

</androidx.constraintlayout.widget.ConstraintLayout>