<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScorePage">

    <ImageView
        android:id="@+id/imageView29"
        android:layout_width="411dp"
        android:layout_height="731dp"
        android:background="#9C27B0"
        android:backgroundTint="#E82196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/app_bg" />

    <ImageView
        android:id="@+id/imageView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView30"
        app:srcCompat="@drawable/score_bg" />

    <ImageView
        android:id="@+id/imageView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView29"
        app:srcCompat="@drawable/dog_logo_finalscore" />

    <TextView
        android:id="@+id/scoreLabelPerc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/kreon"
        android:text="@string/score"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView33"
        app:layout_constraintEnd_toEndOf="@+id/imageView33"
        app:layout_constraintStart_toStartOf="@+id/imageView33"
        app:layout_constraintTop_toBottomOf="@+id/scoreLabelTextView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/scoreLabelTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/kreon"
        android:text="@string/score_label"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView33"
        app:layout_constraintStart_toStartOf="@+id/imageView33"
        app:layout_constraintTop_toBottomOf="@+id/imageView30" />

    <TextView
        android:id="@+id/scoreLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/kreon"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView33" />

    <Button
        android:id="@+id/newQuizBtn"
        android:layout_width="227dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/btn_background"
        android:fontFamily="@font/krona_one"
        android:onClick="onNewQuizClick"
        android:text="@string/new_quiz_btn_lbl"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreLabelText"
        app:layout_constraintVertical_bias="0.485" />

</androidx.constraintlayout.widget.ConstraintLayout>